--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	<title>Document</title>
 	<style>
 		body {
+			position: relative;
 			background-color: #000;
+			/* 좌표 숫자 기록된 부분에 마우스 들어가면 커서가 사라짐 */
+			cursor: none;
 		}
 
 		h1 {
@@ -20,10 +23,14 @@
 			width: 100px;
 			height: 100px;
 			background-color: red;
+			/* body에 position: relative 주고 여기에 top: 0, left: 0 주면 
+			/* 사각형이 마우스에 딱 붙어서 이동 */
+			top: 0;
+			left: 0;
 		}
 	</style>
 	<script>
-		//onload: 화면이 모두 load된 후에 실행
+		//onload: 화면이 모두 load된 후에 실행 (화면이 load 되자마자 실행)
 		window.onload = function () {
 			// DOM 선택 - tagname으로 선택 (+ 첫번째값)
 			let h1 = document.getElementsByTagName("h1")[0];
@@ -35,11 +42,30 @@
 			function mousefunc(e) {
 				// h1태그의 children으로 x 좌표값 기록
 				h1.innerHTML = "x: " + e.clientX + "  y: " + e.clientY;
+				// 마우스가 움직일 때 좌표값에 맞춰 사각형을 이동시킴 (transform: translate(x, y) 이용)
+				// 사각형에 다른 이미지를 넣어 사용 가능
 				cursor_item.style.transform = "translate(" + e.clientX + "px, " + e.clientY + "px)";
 
-				// 콘솔에 x,y 좌표 찍힘
+				// 콘솔에 x,y 좌표 찍기
 				console.log(e.clientX, e.clientY);
 			}
+
+			//loop 함수 계속 실행
+			loop();
+		}
+
+
+		// i를 loop 바깥쪽에 선언하고
+		let i = 0;
+
+		function loop() {
+			// 콘솔에 숫자 1이 계속 찍힘 (onload 함수 안이어서 마우스를 움직이지 않아도 계속 찍힘)
+			// console.log(1);
+			// i = i + 1을 콘솔에 찍으면 화면이 load 되자마자 1,2,3,4,...식으로 frame 단위로 계속 찍힘
+			console.log(i += 1);
+
+			// requestAnimationFrame: 웹서비스에는 잘 안 쓰지만 모션을 줄 때는 많이 쓰는 함수
+			window.requestAnimationFrame(loop);
 		}
 	</script>
 </head>
