--- a/NewYork Times Allbirds/index.html
+++ b/NewYork Times Allbirds/index.html
@@ -7,16 +7,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<style>
-		img {}
+		img {
+			position: absolute;
+		}
+
+		.vod {
+			position: absolute;
+		}
 	</style>
 	<script>
 		let x = 0;
 		let y = 0;
-		let mx = 0; //'마우스 x'
-		let my = 0; //'마우스 y'
-		let speed = 0.009;
+		let mx = 0;
+		let my = 0;
+		let speed = 0.01;
+		let _imgArr;
+		let _bird;
 
 		window.onload = function () {
+			_imgArr = document.getElementsByTagName("img"); //[0]을 없애면 배열이 됨
+			//alert(_imgArr.length); //이미지는 4개
+			_bird = document.getElementsByTagName("div")[0]; //한 개뿐인 경우는 [0] 붙이기
+
 			window.addEventListener('mousemove', mousefunc, false);
 
 			function mousefunc(e) {
@@ -24,12 +36,18 @@
 				y = (e.clientY - window.innerWidth / 2);
 			}
 
-			//loop();
+			loop();
 		}
 
 		function loop() {
 			mx += (x - mx) * speed;
 			my += (y - my) * speed;
+
+			_imgArr[0].style.transform = "translate(" + -(mx / 9) + "px, " + -(my / 9) + "px)";
+			_imgArr[1].style.transform = "translate(" + -(mx / 5) + "px, " + -(my / 5) + "px)";
+			_imgArr[2].style.transform = "translate(" + -(mx / 3) + "px, " + -(my / 3) + "px)";
+			_imgArr[3].style.transform = "translate(" + -(mx / 1) + "px, " + -(my / 1) + "px)";
+			_bird.style.transform = "translate(" + -(mx / 5) + "px, " + -(my / 5) + "px)"
 
 			window.requestAnimationFrame(loop);
 		}
@@ -40,11 +58,10 @@
 	<section>
 		<img src="https://paidpost-assets.nyt.com/paidpost/allbirds/birds-eye-view/images/1-b90e91a4.png" alt="" />
 		<img src="https://paidpost-assets.nyt.com/paidpost/allbirds/birds-eye-view/images/2-f3fd6cf5.png" alt="" />
-		<div class="vod"><video autoplay="" playsinline="" loop=""
+		<div class="vod"><video autoplay="" playsinline="" loop="" muted=""
 				src="https://paidpost-assets.nyt.com/paidpost/allbirds/birds-eye-view/videos/3-27c8c3ea.webm"></video>
 		</div>
-		<img src="https://paidpost-assets.nyt.com/paidpost/allbirds/birds-eye-view/images/4-105dd65b.png
-" alt="">
+		<img src="https://paidpost-assets.nyt.com/paidpost/allbirds/birds-eye-view/images/4-105dd65b.png" alt="">
 		<img src="https://paidpost-assets.nyt.com/paidpost/allbirds/birds-eye-view/images/5-ac49bfdc.png" alt="">
 	</section>
 </body>
