--- a/1. interact with mouse (+ Fix Nothing)/index.html
+++ b/1. interact with mouse (+ Fix Nothing)/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>기본개념 및 Fix Nothing 예제</title>
 	<style>
 		body {
 			position: relative;
